<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/kvizovi"
        android:icon="@drawable/kviz"
        android:title="Kvizovi" />
    <item
        android:id="@+id/predmeti"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="Predmeti" />
    <item
        android:id="@+id/predajKviz"
        android:icon="@drawable/predaj"
        android:title="Predaj kviz" />
    <item
        android:id="@+id/zaustaviKviz"
        android:icon="@android:drawable/ic_delete"
        android:title="Zaustavi kviz" />
</menu>