<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6C5F3">

    <Spinner
        android:id="@+id/odabirGodina"
        android:layout_width="340dp"
        android:layout_height="47dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/odabirPredmet"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginTop="93dp"
        app:layout_constraintBottom_toTopOf="@+id/odabirGrupa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirGodina"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/odabirGrupa"
        android:layout_width="340dp"
        android:layout_height="49dp"
        android:layout_marginBottom="292dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dodajPredmetDugme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="#351967"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirGrupa" />
</androidx.constraintlayout.widget.ConstraintLayout>