<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECD2DD"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/filterKvizova"
        android:layout_width="243dp"
        android:layout_height="32dp"
        android:layout_marginTop="48dp"
        android:background="#F4ECEC"
        android:backgroundTint="#EBE7EF"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaKvizova"
        android:layout_width="359dp"
        android:layout_height="568dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterKvizova"
        app:layout_constraintVertical_bias="0.333" />

</androidx.constraintlayout.widget.ConstraintLayout>